--- a/admin_shopee/index.html
+++ b/admin_shopee/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/unlimited_admin_portal.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unlimited Shopee Admin Portal</title>
   </head>
