--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo-no-background.svg" />
+    <link rel="icon" type="image/svg+xml" href="/unlimited_shopee_Icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unlimited Shopee</title>
   </head>
